--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
@@ -34,5 +34,59 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.startButton {
+  display: flex;
+  aspect-ratio: 1/1;
+  width: 10%;
+  background: linear-gradient(160deg, #ff0000 60%, #00d9ff 60%);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1rem;
+}
+
+.title {
+  display: flex;
+  aspect-ratio: 1/1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  color: #f35309;
+  text-shadow: #282c34;
+  font-weight: 900;
+  position: absolute;
+  animation: bounce 6s infinite;
+}
+@keyframes bounce {
+  0%,
+  100% {
+    top: 50%;
+    left: 20%;
+  }
+  25% {
+    top: 10%;
+    left: 50%;
+  }
+  50% {
+    top: 50%;
+    left: 80%;
+  }
+  75% {
+    top: 90%;
+    left: 50%;
   }
 }
