--- a/src/component/RBG-game.css
+++ b/src/component/RBG-game.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #ea00ff;
-  padding: .05%;
+  padding: 0.05%;
   font-weight: bold;
   position: fixed;
   top: 0;
@@ -13,6 +13,6 @@
 
 .navbarText {
   margin: 0 10%;
-  margin-right: 20%;
-  font-size: 2rem ;
+  margin-right: 10%;
+  font-size: small;
 }
